k8s/ldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  namespace: pla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      enableServiceLinks: false
      containers:
      - name: openldap
        image: osixia/openldap:1.5.0
        ports:
        - containerPort: 389
          name: ldap
        - containerPort: 636
          name: ldaps
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: pla
spec:
  type: NodePort
  selector:
    app: ldap
  ports:
  - port: 389
    targetPort: 389
    nodePort: 31389
    name: ldap
